# canal

./: .gitignore  Canal.sln  Cargo.toml  LICENSE  README.md  paket.dependencies
canal-editor/: README.md  package.json
canal-editor/src-tauri/: Cargo.toml
canal-workstation/: Cargo.toml
canal-workstation/src/: main.rs
crates/collab/: Cargo.toml
crates/collab/src/client/: mod.rs  notebook.rs
crates/document/: Cargo.toml
crates/document/src/: collab.rs  lib.rs  notebook.rs  parser.rs
crates/document/src/notebook/: collab.rs  parser.rs
crates/document/src/parser/: notebook.rs
crates/fs/: Cargo.toml
crates/kernel/: Cargo.toml  README.md
crates/kernel/src/: kernel.rs  lib.rs  message.rs  message_queue.rs  repl.rs
crates/kernel/tests/: kernel.rs  mock_repl.rs  repl.rs  utils.rs
crates/lsp/: Cargo.toml
crates/playdb/: Cargo.toml
crates/replay/: Cargo.toml
crates/workspace/: Cargo.toml
editor/: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
editor/src/: App.vue  main.ts
editor/src-tauri/: Cargo.toml  tauri.conf.json
editor/src-tauri/src/: main.rs
editor/src/views/: AboutView.vue
editor/test/component/: Demo.test.ts
workspace/src/Workspace/: Canal.Workspace.fsproj  Program.fs  paket.references
