[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hilman Nasrulloh <hnasrulloh@hotmail.com>"]
repository = ""
homepage = ""

[workspace.dependencies]
# dependencies
thiserror = "1"
tokio = { version = "1", features = ["full"] }
# dev-dependencies
googletest = "0.11"
# local-dependencies
canal_document = { path = "crates/document" }
canal_fs = { path = "crates/fs" }
canal_kernel = { path = "crates/kernel" }
canal_replay = { path = "crates/replay" }
canal_workspace = { path = "crates/workspace" }


[package]
name = "canal"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
canal_document.workspace = true
