[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hilman Nasrulloh <hnasrulloh@hotmail.com>"]
repository = ""
homepage = ""

[workspace.dependencies]
# dependencies
async-trait = "0.1"
bytes = "1"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
zeromq = "0.3.5"
# dev-dependencies
googletest = "0.11"
mockall = "0.12"
# local-dependencies
canal_document = { path = "crates/document" }
canal_fs = { path = "crates/fs" }
canal_kernel = { path = "crates/kernel" }
canal_workspace = { path = "crates/workspace" }
playdb = { path = "crates/playdb" }


[package]
name = "canal"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
canal_document.workspace = true
