[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hilman Nasrulloh <hnasrulloh@hotmail.com>"]
repository = ""
homepage = ""

[workspace.dependencies]
# dependencies
async-trait = "0.1"
bytes = "1"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
yrs = "0.18"
zeromq = "0.4"
# dev-dependencies
googletest = "0.11"
# local-dependencies
canal_collab = { path = "crates/collab" }
canal_fs = { path = "crates/fs" }
canal_kernel = { path = "crates/kernel" }
canal_workspace = { path = "crates/workspace" }


[package]
name = "canal"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
