[package]
name = "canal_document"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
nom.workspace = true
tokio.workspace = true
yrs.workspace = true

[dev-dependencies]
googletest.workspace = true
indoc.workspace = true
