[package]
name = "canal_kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-stream.workspace = true
async-trait.workspace = true
bytes.workspace = true
rmp-serde.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
zeromq.workspace = true

[dev-dependencies]
mockall.workspace = true
googletest.workspace = true
